# discord-role-icon-bot

./: .env.example  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  configuration.example.json  docker-compose.yml
.github/workflows/: test.yaml
src/: logger.rs  main.rs
src/commands/: mod.rs
src/events/: guild_member_add.rs  guild_member_addition.rs  guild_member_change.rs  mod.rs  ready.rs
src/model/: configuration.rs  feature.rs  mod.rs  role.rs
src/utils/: append_emoji.rs  channel_logger.rs  converter.rs  emoji_changer.rs  mod.rs
