[package]
name = "discord-role-icon-bot"
version = "0.1.0"
edition = "2021"
authors = ["Maximilian Wolf"]
repository = "https://github.com/wolfedme/discord-role-icon-bot"

[dependencies]
serenity = "0.12.2"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
