[package]
name = "discord-role-icon-bot"
version = "0.1.0"
edition = "2021"
authors = ["Maximilian Wolf"]
repository = "https://github.com/wolfedme/discord-role-icon-bot"

[dependencies]
serenity = { version = "0.12.2", features = ["cache"] }
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
emojis = { version = "0.6.4", features = ["serde"] }
dirs = "5.0.1"

[dev-dependencies]
mockall = "0.13.0"
